--- a/task7.html
+++ b/task7.html
@@ -10,6 +10,7 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
+
         .container {
             width: 80%;
             margin: 0 auto;
@@ -140,6 +141,14 @@
             transform: translate(-250px, 30px);
             z-index: 1;
         }
+
+        .gal {
+            height: 600px;
+        }
+
+        .sert {
+            width: 600px;
+        }
     </style>
 </head>
 
@@ -179,11 +188,15 @@
                 Внутренний блок
             </div>
         </div>
-        <div>
+        <div class="gal">
             <img src="./img/3.jpg" alt="" class="p3">
             <img src="./img/2.jpg" alt="" class="p2">
             <img src="./img/1.jpg" alt="" class="p1">
         </div>
+        <h1>Задание 8</h1>
+        <img class="sert" src="./img/php.jpg" alt="">
+        <br>
+        <a href="https://tilda.cc/page/preview/?pageid=25651284">Итоговая работа</a>
     </div>
 </body>
 
